tests/baselines/reference/memberScope.errors.txt
memberScope.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
memberScope.ts(3,17): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
memberScope.ts(4,11): error TS2708: Cannot use namespace 'Basil' as a value.


==== memberScope.ts (3 errors) ====
    module Salt {
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      export class Pepper {}
      export module Basil { }
                    ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      var z = Basil.Pepper;
              ~~~~~
!!! error TS2708: Cannot use namespace 'Basil' as a value.
    }
    
    